--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,6 +14,10 @@ on:
 permissions:
   contents: read
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   release-images:
     runs-on: ubuntu-latest
@@ -55,17 +59,17 @@ jobs:
           flavor: |
             latest=false
 
-      - name: Docker meta (plugin)
-        id: plugin-meta
-        uses: docker/metadata-action@v4
-        with:
-          images: |
-            quay.io/argoproj/kubectl-argo-rollouts
-          #  ghcr.io/argoproj/kubectl-argo-rollouts
-          tags: |
-            type=semver,pattern={{version}},prefix=v,value=${{ github.event.inputs.tag }}
-          flavor: |
-            latest=false
+#      - name: Docker meta (plugin)
+#        id: plugin-meta
+#        uses: docker/metadata-action@v4
+#        with:
+#          images: |
+#            quay.io/argoproj/kubectl-argo-rollouts
+#          #  ghcr.io/argoproj/kubectl-argo-rollouts
+#          tags: |
+#            type=semver,pattern={{version}},prefix=v,value=${{ github.event.inputs.tag }}
+#          flavor: |
+#            latest=false
 
       # - name: Login to GitHub Container Registry
       #   if: github.event_name != 'pull_request'
@@ -75,13 +79,31 @@ jobs:
       #     username: ${{ github.repository_owner }}
       #     password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Login to Quay.io
+#      - name: Login to Quay.io
+#        if: github.event_name != 'pull_request'
+#        uses: docker/login-action@v2
+#        with:
+#          registry: quay.io
+#          username: ${{ secrets.QUAY_USERNAME }}
+#          password: ${{ secrets.QUAY_ROBOT_TOKEN }}
+
+      # Login against a Docker registry except on PR
+      # https://github.com/docker/login-action
+      - name: Log into registry ${{ env.REGISTRY }}
         if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
-          registry: quay.io
-          username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_ROBOT_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Extract metadata (tags, labels) for Docker
+      # https://github.com/docker/metadata-action
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push (controller-image)
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671 # v4.0.0
@@ -93,141 +115,141 @@ jobs:
           provenance: false
           sbom: false
 
-      - name: Build and push (plugin-image)
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671 # v4.0.0
-        with:
-          context: .
-          target: kubectl-argo-rollouts
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ steps.plugin-meta.outputs.tags }}
-          provenance: false
-          sbom: false
+#      - name: Build and push (plugin-image)
+#        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671 # v4.0.0
+#        with:
+#          context: .
+#          target: kubectl-argo-rollouts
+#          platforms: linux/amd64,linux/arm64
+#          push: true
+#          tags: ${{ steps.plugin-meta.outputs.tags }}
+#          provenance: false
+#          sbom: false
 
 
-  release-artifacts:
-    permissions:
-      contents: write  # for softprops/action-gh-release to create GitHub release
-    runs-on: ubuntu-latest
-    needs: release-images
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3.1.0
-        with:
-          ref: ${{ github.event.inputs.tag }}
-
-      - name: Setup Golang
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
-
-      - name: Generate release artifacts
-        run: |
-          make release-plugins
-          make checksums
-          make manifests IMAGE_TAG=${{ github.event.inputs.tag }}
-
-      - name: Generate SBOM (spdx)
-        id: spdx-builder
-        env:
-          # defines the spdx/spdx-sbom-generator version to use.
-          SPDX_GEN_VERSION: v0.0.13
-          # defines the sigs.k8s.io/bom version to use.
-          SIGS_BOM_VERSION: v0.2.1
-          # comma delimited list of project relative folders to inspect for package
-          # managers (gomod, yarn, npm).
-          PROJECT_FOLDERS: ".,./ui"
-          # full qualified name of the docker image to be inspected
-          DOCKER_IMAGE: quay.io/argoproj/argo-rollouts:${{ github.event.inputs.tag }}
-
-        run: |
-          yarn install --cwd ./ui
-          go install github.com/spdx/spdx-sbom-generator/cmd/generator@$SPDX_GEN_VERSION
-          go install sigs.k8s.io/bom/cmd/bom@$SIGS_BOM_VERSION
-
-          # Generate SPDX for project dependencies analyzing package managers
-          for folder in $(echo $PROJECT_FOLDERS | sed "s/,/ /g")
-          do
-            generator -p $folder -o /tmp
-          done
-
-          # Generate SPDX for binaries analyzing the docker image
-          if [[ ! -z $DOCKER_IMAGE ]]; then
-            bom generate -o /tmp/bom-docker-image.spdx -i $DOCKER_IMAGE
-          fi
-
-          cd /tmp && tar -zcf sbom.tar.gz *.spdx
-
-      - name: Login to Quay.io
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v2
-        with:
-          registry: quay.io
-          username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_ROBOT_TOKEN }}
-
-      - name: Install cosign
-        uses: sigstore/cosign-installer@main
-        with:
-          cosign-release: 'v1.13.1'
-
-      - name: Install crane to get digest of image
-        uses: imjasonh/setup-crane@v0.2
-
-      - name: Get digest of controller-image
-        run: |
-          echo "CONTROLLER_DIGEST=$(crane digest quay.io/argoproj/argo-rollouts:${{ github.event.inputs.tag }})" >> $GITHUB_ENV
-
-      - name: Get digest of plugin-image
-        run: |
-          echo "PLUGIN_DIGEST=$(crane digest quay.io/argoproj/kubectl-argo-rollouts:${{ github.event.inputs.tag }})" >> $GITHUB_ENV
-
-      - name: Sign Argo Rollouts Images
-        run: |
-          cosign sign --key env://COSIGN_PRIVATE_KEY quay.io/argoproj/argo-rollouts@${{ env.CONTROLLER_DIGEST }}
-          cosign sign --key env://COSIGN_PRIVATE_KEY quay.io/argoproj/kubectl-argo-rollouts@${{ env.PLUGIN_DIGEST }}
-        env:
-          COSIGN_PRIVATE_KEY: ${{secrets.COSIGN_PRIVATE_KEY}}
-          COSIGN_PASSWORD: ${{secrets.COSIGN_PASSWORD}}
-
-      - name: Sign checksums and create public key for release assets
-        run: |
-          cosign sign-blob --key env://COSIGN_PRIVATE_KEY ./dist/argo-rollouts-checksums.txt > ./dist/argo-rollouts-checksums.sig
-          cosign public-key --key env://COSIGN_PRIVATE_KEY > ./dist/argo-rollouts-cosign.pub
-          cosign sign-blob --key env://COSIGN_PRIVATE_KEY /tmp/sbom.tar.gz > /tmp/sbom.tar.gz.sig
-          # Displays the public key to share.
-          cosign public-key --key env://COSIGN_PRIVATE_KEY
-        env:
-          COSIGN_PRIVATE_KEY: ${{secrets.COSIGN_PRIVATE_KEY}}
-          COSIGN_PASSWORD: ${{secrets.COSIGN_PASSWORD}}
-
-      - name: update stable tag for docs
-        run: |
-          git tag -f stable ${{ github.event.inputs.tag }}
-          git push -f origin stable
-        if:  ${{ inputs.update_stable_tag }}
-
-      - name: Draft release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{ github.event.inputs.tag }}
-          draft: true
-          files: |
-            dist/kubectl-argo-rollouts-linux-amd64
-            dist/kubectl-argo-rollouts-linux-arm64
-            dist/kubectl-argo-rollouts-darwin-amd64
-            dist/kubectl-argo-rollouts-darwin-arm64
-            dist/kubectl-argo-rollouts-windows-amd64
-            dist/argo-rollouts-checksums.txt
-            dist/argo-rollouts-checksums.sig
-            dist/argo-rollouts-cosign.pub
-            manifests/dashboard-install.yaml
-            manifests/install.yaml
-            manifests/namespace-install.yaml
-            manifests/notifications-install.yaml
-            docs/features/kustomize/rollout_cr_schema.json
-            /tmp/sbom.tar.gz
-            /tmp/sbom.tar.gz.sig
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#  release-artifacts:
+#    permissions:
+#      contents: write  # for softprops/action-gh-release to create GitHub release
+#    runs-on: ubuntu-latest
+#    needs: release-images
+#
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v3.1.0
+#        with:
+#          ref: ${{ github.event.inputs.tag }}
+#
+#      - name: Setup Golang
+#        uses: actions/setup-go@v3
+#        with:
+#          go-version: 1.19
+#
+#      - name: Generate release artifacts
+#        run: |
+#          make release-plugins
+#          make checksums
+#          make manifests IMAGE_TAG=${{ github.event.inputs.tag }}
+#
+#      - name: Generate SBOM (spdx)
+#        id: spdx-builder
+#        env:
+#          # defines the spdx/spdx-sbom-generator version to use.
+#          SPDX_GEN_VERSION: v0.0.13
+#          # defines the sigs.k8s.io/bom version to use.
+#          SIGS_BOM_VERSION: v0.2.1
+#          # comma delimited list of project relative folders to inspect for package
+#          # managers (gomod, yarn, npm).
+#          PROJECT_FOLDERS: ".,./ui"
+#          # full qualified name of the docker image to be inspected
+#          DOCKER_IMAGE: quay.io/argoproj/argo-rollouts:${{ github.event.inputs.tag }}
+#
+#        run: |
+#          yarn install --cwd ./ui
+#          go install github.com/spdx/spdx-sbom-generator/cmd/generator@$SPDX_GEN_VERSION
+#          go install sigs.k8s.io/bom/cmd/bom@$SIGS_BOM_VERSION
+#
+#          # Generate SPDX for project dependencies analyzing package managers
+#          for folder in $(echo $PROJECT_FOLDERS | sed "s/,/ /g")
+#          do
+#            generator -p $folder -o /tmp
+#          done
+#
+#          # Generate SPDX for binaries analyzing the docker image
+#          if [[ ! -z $DOCKER_IMAGE ]]; then
+#            bom generate -o /tmp/bom-docker-image.spdx -i $DOCKER_IMAGE
+#          fi
+#
+#          cd /tmp && tar -zcf sbom.tar.gz *.spdx
+#
+#      - name: Login to Quay.io
+#        if: github.event_name != 'pull_request'
+#        uses: docker/login-action@v2
+#        with:
+#          registry: quay.io
+#          username: ${{ secrets.QUAY_USERNAME }}
+#          password: ${{ secrets.QUAY_ROBOT_TOKEN }}
+#
+#      - name: Install cosign
+#        uses: sigstore/cosign-installer@main
+#        with:
+#          cosign-release: 'v1.13.1'
+#
+#      - name: Install crane to get digest of image
+#        uses: imjasonh/setup-crane@v0.2
+#
+#      - name: Get digest of controller-image
+#        run: |
+#          echo "CONTROLLER_DIGEST=$(crane digest quay.io/argoproj/argo-rollouts:${{ github.event.inputs.tag }})" >> $GITHUB_ENV
+#
+#      - name: Get digest of plugin-image
+#        run: |
+#          echo "PLUGIN_DIGEST=$(crane digest quay.io/argoproj/kubectl-argo-rollouts:${{ github.event.inputs.tag }})" >> $GITHUB_ENV
+#
+#      - name: Sign Argo Rollouts Images
+#        run: |
+#          cosign sign --key env://COSIGN_PRIVATE_KEY quay.io/argoproj/argo-rollouts@${{ env.CONTROLLER_DIGEST }}
+#          cosign sign --key env://COSIGN_PRIVATE_KEY quay.io/argoproj/kubectl-argo-rollouts@${{ env.PLUGIN_DIGEST }}
+#        env:
+#          COSIGN_PRIVATE_KEY: ${{secrets.COSIGN_PRIVATE_KEY}}
+#          COSIGN_PASSWORD: ${{secrets.COSIGN_PASSWORD}}
+#
+#      - name: Sign checksums and create public key for release assets
+#        run: |
+#          cosign sign-blob --key env://COSIGN_PRIVATE_KEY ./dist/argo-rollouts-checksums.txt > ./dist/argo-rollouts-checksums.sig
+#          cosign public-key --key env://COSIGN_PRIVATE_KEY > ./dist/argo-rollouts-cosign.pub
+#          cosign sign-blob --key env://COSIGN_PRIVATE_KEY /tmp/sbom.tar.gz > /tmp/sbom.tar.gz.sig
+#          # Displays the public key to share.
+#          cosign public-key --key env://COSIGN_PRIVATE_KEY
+#        env:
+#          COSIGN_PRIVATE_KEY: ${{secrets.COSIGN_PRIVATE_KEY}}
+#          COSIGN_PASSWORD: ${{secrets.COSIGN_PASSWORD}}
+#
+#      - name: update stable tag for docs
+#        run: |
+#          git tag -f stable ${{ github.event.inputs.tag }}
+#          git push -f origin stable
+#        if:  ${{ inputs.update_stable_tag }}
+#
+#      - name: Draft release
+#        uses: softprops/action-gh-release@v1
+#        with:
+#          tag_name: ${{ github.event.inputs.tag }}
+#          draft: true
+#          files: |
+#            dist/kubectl-argo-rollouts-linux-amd64
+#            dist/kubectl-argo-rollouts-linux-arm64
+#            dist/kubectl-argo-rollouts-darwin-amd64
+#            dist/kubectl-argo-rollouts-darwin-arm64
+#            dist/kubectl-argo-rollouts-windows-amd64
+#            dist/argo-rollouts-checksums.txt
+#            dist/argo-rollouts-checksums.sig
+#            dist/argo-rollouts-cosign.pub
+#            manifests/dashboard-install.yaml
+#            manifests/install.yaml
+#            manifests/namespace-install.yaml
+#            manifests/notifications-install.yaml
+#            docs/features/kustomize/rollout_cr_schema.json
+#            /tmp/sbom.tar.gz
+#            /tmp/sbom.tar.gz.sig
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
