--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,8 +11,8 @@ on:
         required: true
         type: boolean
         default: 'false'
-permissions:
-  contents: read
+# permissions:
+#  contents: read
 
 env:
   REGISTRY: ghcr.io
