--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Get SHA
         id: get-sha
-        run: echo "::set-output name=sha::$(git log -1 --format='%H')"
+        run: echo "name=sha::$(git log -1 --format='%H')" >> $GITHUB_OUTPUT
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
