actions: multi-alb build controller image

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -103,7 +103,7 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ github.event.inputs.tag }}
+          tags: ${{ env.REGISTRY }}/${{ github.event.inputs.tag }}
         # provenance: false
         # sbom: false
 
