--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -104,8 +104,8 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.tag }}
-        # provenance: false
-        # sbom: false
+          provenance: false
+          sbom: false
 
 #      - name: Build and push (plugin-image)
 #        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671 # v4.0.0
