--- a/manifests/crds/rollout-crd.yaml
+++ b/manifests/crds/rollout-crd.yaml
@@ -683,6 +683,10 @@ spec:
                                 type: string
                               ingress:
                                 type: string
+                              additionalIngresses:
+                                items:
+                                  type: string
+                                type: array
                               rootService:
                                 type: string
                               servicePort:
