--- a/manifests/install.yaml
+++ b/manifests/install.yaml
@@ -11735,6 +11735,10 @@ spec:
                                 type: string
                               ingress:
                                 type: string
+                              additionalIngresses:
+                                items:
+                                  type: string
+                                type: array
                               rootService:
                                 type: string
                               servicePort:
